--- a/src/AngularAuthUI/src/app/components/login/login.component.html
+++ b/src/AngularAuthUI/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="outer">
     <div class="container">
         <div class="row">
-            <div class="offset-md-2 col-lg-5 col-md-7 offset-lg-4 offset-md-3">
+            <div class="col-lg-4 col-md-8 offset-lg-4 offset-md-2">
                 <div class="panel border bg-white">
                     <div class="panel-heading">
                         <h3 class="pt-3 font-weight-bold">Login</h3>
@@ -23,8 +23,8 @@
                                 </div>
                             </div>
                             <small *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required', 'password')" class="text-danger">*Password is required</small>
-                            <div class="form-inline fr mt-4">
-                                <a href="#" id="forget" class="font-weight-bold">Forget Password?</a>
+                            <div class="form-inline fr mt-4 text-end">
+                                <a href="#" id="forget" class="fw-bold">Forget Password?</a>
                             </div>
                             <button (click)="onLogin()" type="submit" class="btn btn-primary btn-block mt-4 w-100">Login</button>
                             <div class="text-center pt-4 text-muted">Don't have account? <a href="#" id="forget" routerLink="/signup">Sign Up</a></div>
