--- a/src/AngularAuthUI/src/app/components/dashboard/dashboard.component.html
+++ b/src/AngularAuthUI/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
+<button class="btn btn-danger" (click)="logout()">Log Out</button>
 <h1>Hello Dashboard</h1>
+
+<ul *ngFor="let user of users">
+    <li>{{ user.username }}</li>
+</ul>
