Added interceptor to moify request header

--- a/src/AngularAuthUI/src/app/components/dashboard/dashboard.component.html
+++ b/src/AngularAuthUI/src/app/components/dashboard/dashboard.component.html
@@ -2,5 +2,5 @@
 <h1>Hello Dashboard</h1>
 
 <ul *ngFor="let user of users">
-    <li>{{ user.username }}</li>
+    <li>{{ user.firstName }} {{ user.lastName }}</li>
 </ul>
